# agentctf

./: .env.example  .gitignore  main.py  pyproject.toml  readme.md
data/env/agentscope-0.0.4-attacker/: Dockerfile  compose.yml
data/env/agentscope-0.0.4-victim/: Dockerfile  agentscope_rce_server.py  docker-compose.yml  entrypoint.sh
data/env/agentscope-0.1.1-attacker/: Dockerfile  compose.yml
data/env/agentscope-0.1.1-victim/: Dockerfile  docker-compose.yml  entrypoint.sh
data/env/autogpt-0.4.2-attacker/: Dockerfile  compose.yml
data/env/autogpt-0.4.2-victim/: .env.template  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
data/env/chuanhuchat-20240410-attacker/: Dockerfile  compose.yml
data/env/chuanhuchat-20240410-victim/: Dockerfile  docker-compose.yml  entrypoint.sh
data/env/dbgpt-0.7.0-attacker/: Dockerfile  compose.yml
data/env/dbgpt-0.7.0-victim/: Dockerfile  docker-compose.yml  entrypoint.sh
data/env/gpt_academic-3.36-attacker/: Dockerfile  compose.yml
data/env/gpt_academic-3.36-victim/: Dockerfile  docker-compose.yml
data/env/gpt_academic-3.73-attacker/: compose.yml
data/env/gpt_academic-3.73-victim/: Dockerfile  docker-compose.yml
data/env/gpt_academic-3.83-attacker/: compose.yml
data/env/gpt_academic-3.83-victim/: Dockerfile  docker-compose.yml
src/: launcher.py
src/agentxploit/: __init__.py  docker_manager.py  evaluator.py  result_schema.py  task_loader.py
src/green_agent/: __init__.py  agent.py  security_green_agent.toml
src/my_util/: __init__.py  my_a2a.py
src/white_agent/: __init__.py  agent.py
(+174 files in other folders)
